# elderly-surveillance-robot

./: .gitignore  AWS_CONSOLE_VERIFICATION.md  AWS_IOT_DEPLOYMENT.md  AWS_IOT_POLICY.md  AWS_QUICK_REFERENCE.md  AWS_SETUP.md  CHANGELOG.md  CLOUD_INTEGRATION_REQUIREMENTS.md  CMakeLists.txt  COMPATIBILITY_CHECK.md  COMPLETE_TF_DEPLOYMENT.md  DEPENDENCY_FIX_SMBUS2.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIXES.md  DOCUMENTATION_INDEX.md  DRIFT_FIX_APPLIED.md  EMERGENCY_TF_GHOSTING_FIX.md  ESP32_FIRMWARE_UPLOAD.txt  FINAL_KINEMATIC_VERIFICATION.txt  FINAL_LASER_MODEL_FIX_APPLIED.md  FORENSIC_IMU_MAGNETOMETER_FAILURE.md  GAS_SENSOR_DEBUG_GUIDE.md  GMAPPING_STABILITY_FIX_APPLIED.md  HARDWARE.md  HARDWARE_MAP.md  IMU_MOUNTING_FIX_REFERENCE.md  JETSON_BUILD_COMMANDS.txt  JETSON_EXECUTE_NOW.sh  JETSON_KVS_INTEGRATION.txt  JETSON_MANUAL_COMMANDS.txt  KINEMATIC_FIX_APPLIED.md  MANUAL_VALIDATION.md  ODOM_LAG_FIX.md  ODOM_MAP_FIX_APPLIED.md  PHASE_2_IMPLEMENTATION.md  PHYSICAL_VALIDATION_PROTOCOL.md  POLICY_ROBOTFULLACCESS.md  PRE_LAUNCH_CHECKLIST.md  PROJECT_ORGANIZATION_SUMMARY.md  QUICK_REFERENCE.md  (+19 more)
ai/: README.md  SETUP_GUIDE.md  requirements-experiments.txt  requirements.txt
ai/experiments/: README.md
ai/experiments/face_recognition/: face_recognition_stranger_detection_experiments.ipynb
ai/experiments/fall_detection/: fall_detection_mediapipe_experiments.ipynb
ai/experiments/fire_detection/: fire_smoke_person_yolov8_experiments.ipynb
ai/src/: main.py  pipeline.py
ai/src/layers/: __init__.py
ai/src/layers/face_recognition/: README.md  __init__.py  face_recognition.py
ai/src/layers/fall_detection/: README.md  __init__.py  fall_detection.py
ai/src/layers/fire_detection/: README.md  __init__.py  fire_detection.py
aws_certs/: .gitignore  PLACEHOLDER_AmazonRootCA1.pem  PLACEHOLDER_device-certificate.pem.crt  PLACEHOLDER_device-private.pem.key  README.md  setup_certificates.sh
cloud/: README.md  README_CLOUD.md
config/: amcl.yaml  aws_bridge.yaml  bashrc_kvs_config.sh  cloud_config.yaml  costmap_common_params.yaml  costmap_params.yaml  diagnostics.yaml  dwa_local_planner.yaml  ekf.yaml  elderly-bot-kvs.service  global_costmap.yaml  gmapping.yaml  livekit_config.yaml  local_costmap.yaml  patrol_goals.yaml  sensors_actuators.yaml
config/mapping/: gmapping.yaml
config/navigation/: costmap_params.yaml  dwa_local_planner.yaml  patrol_goals.yaml
docs/: BUZZER_WIRING.md  ENCODER_CALIBRATION.md  GAS_SENSOR_WIRING.md  IMU_CALIBRATION.md  LIVEKIT_UBUNTU18_SETUP.md  MPU9250_JETSON_SETUP.md  SYSTEM_OVERVIEW.md
firmware/: ESP32_CORE_COMPATIBILITY.md  ESP32_FIRMWARE_ANALYSIS_REPORT.md  FIRMWARE_CHANGES.md  FIRMWARE_TROUBLESHOOTING.md  FIRMWARE_VERIFICATION_REPORT.md  GPIO_TRANSPORT_EVALUATION.md  LIBRARY_VERSION_DIAGNOSIS.md  LWIP_CRASH_FIX.md  QUICK_FIX.md  QUICK_FIX_CHECKLIST.md  ROSSERIAL_SETUP_GUIDE.md  ROSSERIAL_SYNC_FIX.md  ROSSERIAL_TROUBLESHOOTING.md  SYNC_TROUBLESHOOTING_STEPS.md  SYSTEM_REDESIGN_SUMMARY.md  WORKING_SYNC_METHOD.md  elderly_bot_esp32.ino  elderly_bot_esp32_no_imu.ino  elderly_bot_esp32_wifi.ino  motor_and_encoder_HW_test.ino  motor_and_encoder_SW_test.ino  test.ino  test_sync_minimal.ino
launch/: CLOUD_BRIDGE_LAUNCH_SNIPPET.xml  SENSORS_ACTUATORS_LAUNCH_SNIPPET.xml  bringup.launch  camera_streaming.launch  cloud_bridge.launch  gmapping.launch  imu_nav.launch  kvs_stream.launch  livekit_stream.launch  mapping.launch  mpu9250_jetson.launch  navigation.launch  test_livekit.launch  usb_bringup.launch
maps/: README.md
mobile_app/: README.md  README.md.txt
mobile_app/backend/: .env  .env.example  .gitignore  README.md  mqtt_client.py  mqtt_client.py.save  requirements.txt  test_db.py
mobile_app/backend/app/: auth_utils.py  database.py  main.py  models.py  mqtt_client.py  schemas.py  test.py
mobile_app/backend/app/routers/: auth.py  system_router.py
mobile_app/backend/certs/: backend.cert.pem  backend.private.key
mobile_app/frontend/: README.md  pubspec.yaml
mobile_app/frontend/android/app/: build.gradle.kts
mobile_app/frontend/ios/Runner/: Info.plist
mobile_app/frontend/lib/: main.dart  manage_people_screen.dart  notification.dart  profile_screen.dart  welcome_screen.dart
mobile_app/frontend/lib/core/: const.dart  on_generate_route.dart
mobile_app/frontend/linux/: CMakeLists.txt
mobile_app/frontend/linux/runner/: my_application.cc
mobile_app/frontend/macos/Runner.xcodeproj/: project.pbxproj
mobile_app/frontend/test/: widget_test.dart
mobile_app/frontend/web/: index.html  manifest.json
mobile_app/frontend/windows/: CMakeLists.txt
ros/: README.md
ros/elderly_bot/scripts/: camera_node.py
ros/firmware/: elderly_bot_esp32_wifi.ino
ros/launch/: mapping.launch
ros/scripts/: camera_node.py  cloud_bridge_node.py  kvs_streamer_node.py  mpu9250_node.py  system_health_monitor.py
ros/src/elderly_bot/: .gitignore  CMakeLists.txt  README.md  package.xml
ros/src/elderly_bot/config/mapping/: ekf.yaml
ros/src/elderly_bot/config/sensors/: sensors_actuators.yaml
ros/src/elderly_bot/docs/: HARDWARE.md
ros/src/elderly_bot/scripts/: kvs_streamer_node.py  mpu9250_node.py
rviz/: mapping.rviz  navigation.rviz
scripts/: README_MPU9250_SETUP.md  autonomous_square_test.sh  aws_cert_test.py  aws_connection_test.py  aws_connection_test_port443.py  aws_iot_diagnositic.py  boss_level_test.sh  camera_node.py  check_permissions.sh  cloud_bridge_node.py  commit_drift_fix.sh  configure_aws.sh  diagnose_aws_network.sh  diagnose_tf_slam.sh  elderly_bot_bridge.py  final_drift_validation.sh  final_handshake.py  fix_gpio_permissions.sh  fix_ros_python_env.sh  hard_validation_slow_motion.sh  hard_validation_stationary.sh  i2c test  imu_mounting_diagnostic.sh  install_livekit_18.04.sh  kvs_log_viewer.sh  kvs_streamer_node.py  livekit_streamer.py  master_validator.sh  mpu9250_node.py  mqtt_test.py  patrol_client.py  send_buzzer_command.py  sensors_actuators_node.py  setup_aws_iot.sh  setup_camera_kvs.sh  setup_cloud_bridge.sh  setup_cloud_fix.sh  system_health_monitor.py  test_aws_connection.py  test_buzzer_direct.py  (+11 more)
urdf/: elderly_bot.urdf
(+48 files in other folders)
