<?xml version="1.0"?>
<package format="2">
  <name>elderly_bot</name>
  <version>0.1.0</version>
  <description>
    ROS package for an indoor robot assisting in elderly monitoring.
  </description>

  <maintainer email="omarhussamohamed@gmail.com">Omar Hussam</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Core ROS -->
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- TF -->
  <depend>tf</depend>
  <depend>tf2_ros</depend>

  <!-- Image handling -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- Diagnostics -->
  <depend>diagnostic_msgs</depend>

  <!-- Actions / navigation messages (client only) -->
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>

  <export>
  </export>
</package>
